[10.9] [PR 527] update search_elastic
Backport of PR #527

--- a/modules/admin_manual/pages/configuration/general_topics/search.adoc
+++ b/modules/admin_manual/pages/configuration/general_topics/search.adoc
@@ -57,7 +57,7 @@ or enable it via the GUI menu:Settings[Admin > Apps > Full Text Search > Enable]
 
 == Configuration
 
-To configure the Full Text Search, go to menu:Settings[Admin > Search]
+To configure the Full Text Search, go to menu:Settings[Admin > Search].
 
 === Authentication Methods
 
