Document that ownCloud 10.9 and above also works with Mariadb 10.7 and 10.8

--- a/modules/admin_manual/pages/installation/system_requirements.adoc
+++ b/modules/admin_manual/pages/installation/system_requirements.adoc
@@ -38,7 +38,7 @@ For _best performance_, _stability_, _support_ and _full functionality_, we offi
 | {recommended-php-version}
 |===
 
-(1) MariaDB 10.6 is *only supported* with ownCloud release 10.9 and upwards. See the xref:installation/manual_installation/manual_installation.adoc#install-a-database[Install a Database] guide and xref:maintenance/upgrading/database_upgrade.adoc[Database Upgrade] guide.
+(1) MariaDB 10.6 and later is *only supported* with ownCloud release 10.9 and upwards. See the xref:installation/manual_installation/manual_installation.adoc#install-a-database[Install a Database] guide and xref:maintenance/upgrading/database_upgrade.adoc[Database Upgrade] guide.
 
 == Officially Supported Environments
 
@@ -60,7 +60,7 @@ including all 100% compatible derivatives
 * openSUSE Leap 15.2
 
 | Database
-| * xref:#database-requirements[MySQL] 8+ or xref:#database-requirements[MariaDB] 10.2, 10.3, 10.4 or 10.5 ^1^ (*Recommended*)
+| * xref:#database-requirements[MySQL] 8+ or xref:#database-requirements[MariaDB] 10.2 through 10.8 ^1^ (*Recommended*)
 * Oracle 11 and 12 (*Enterprise only*)
 * PostgreSQL 9, 10, 11, 12, 13 or 14
 * SQLite (*Not for production*)
@@ -72,7 +72,7 @@ including all 100% compatible derivatives
 |* {supported-php-versions}
 |===
 
-(1) MariaDB 10.6 is *only supported* with ownCloud release 10.9 and upwards. See the xref:installation/manual_installation/manual_installation.adoc#install-a-database[Install a Database] guide and xref:maintenance/upgrading/database_upgrade.adoc[Database Upgrade] guide.
+(1) MariaDB 10.6 and later is *only supported* with ownCloud release 10.9 and upwards. See the xref:installation/manual_installation/manual_installation.adoc#install-a-database[Install a Database] guide and xref:maintenance/upgrading/database_upgrade.adoc[Database Upgrade] guide.
 
 [NOTE]
 ====
