--- a/modules/admin_manual/pages/enterprise/installation/install.adoc
+++ b/modules/admin_manual/pages/enterprise/installation/install.adoc
@@ -55,6 +55,12 @@ upgrade your ownCloud Enterprise to a new version.
 
 TIP: if you want to remove the current license, open ownCloud and navigate to menu:Settings[Admin > General] and click btn:[Remove current license key].
 
+=== User counting
+
+Your ownCloud Enterprise License Key is valid for the purchased amount of users, as per the ownCloud EULA - ownCloud Commercial License.
+When you generate a config.report you will get a counting of the enabled users, the ownCloud guest users (if the guest app is enabled) and the number of user directories created. The later is the user number you will need licenses for. Guest users are currently counted with a fair use policy - which means that you can't have more guest users then you have licensed users. If you exceed the number of licensed users please contact your account manager or ownCloud Partner and true-up as per your contract or EULA with us.
+The user directories are created on first login. When a user is deleted, the user directories are deleted as well. Users which are disblaed count. The last login is irrelavant.
+
 == Supported ownCloud Enterprise Edition Apps
 
 See xref:installation/apps_supported.adoc[Supported Apps in ownCloud] for a list of supported apps.
