--- a/modules/admin_manual/pages/configuration/server/config_sample_php_parameters.adoc
+++ b/modules/admin_manual/pages/configuration/server/config_sample_php_parameters.adoc
@@ -1699,10 +1699,11 @@ completed within one day.
 ....
 
 === Define the DAV chunk base directory
-Location of the chunk folder, defaults to `data/$user/uploads` where
-`$user` is the current user. When specified, the format will change to
-`$dav.chunk_base_dir/$user` where `$dav.chunk_base_dir` is the configured
-cache directory and `$user` is the user.
+Location of the chunk folder, defaults to `<datadirectory>/$user/uploads` where
+`$user` is the current user and `datadirectory` is the datadirectory described here.
+
+When specified, the format will change to `$dav.chunk_base_dir/$user` where
+`$dav.chunk_base_dir` is the configured cache directory here and `$user` is the user.
 
 ==== Code Sample
 
