Config to Docs run

--- a/modules/admin_manual/pages/configuration/server/config_sample_php_parameters.adoc
+++ b/modules/admin_manual/pages/configuration/server/config_sample_php_parameters.adoc
@@ -2271,6 +2271,8 @@ This will disable the minifier and outputs some additional debug information
 WARNING:
 Be warned that, if you set this to `true`, exceptions display
 stack traces on the web interface, *including passwords*, — **in plain text!**.
+Furthermore the content-disposition header will be lost and thus files will be
+displayed in the browser rather than downloaded.
 We strongly encourage you never to use it in production.
 
 ==== Code Sample
