--- a/modules/admin_manual/pages/installation/docker/index.adoc
+++ b/modules/admin_manual/pages/installation/docker/index.adoc
@@ -189,13 +189,13 @@ It is the admin's responsibility to make the files persistent.
 To inspect the volumes run:
 [source,docker]
 ----
-docker volume ls | grep ownclouddockerserver
+docker volume ls | grep owncloud-setup
 ----
 
 To export the files as a tar archive run:
 [source,docker]
 ----
-docker run -v ownclouddockerserver_files:/mnt \
+docker run -v owncloud-setup_files:/mnt \
        ubuntu tar cf - -C /mnt . > files.tar
 ----
 ====
