--- a/modules/admin_manual/pages/installation/docker/index.adoc
+++ b/modules/admin_manual/pages/installation/docker/index.adoc
@@ -189,13 +189,18 @@ It is the admin's responsibility to make the files persistent.
 To inspect the volumes run:
 [source,docker]
 ----
-docker volume ls | grep owncloud-setup
+docker volume ls
 ----
 
-To export the files as a tar archive run:
+The volume name depends on the project name which builds the first part of the volume and the name of the volume in the docker file. 
+It can be configured using the variable `COMPOSE_PROJECT_NAME` which can also be defined in a `.env` file. 
+If not specified, the directory in which docker-compose is executed will be used as a name.
+The naming pattern of the volume is `<COMPOSE_PROJECT_NAME>_<VOLUME_NAME>`.
+
+To export the files of the project "owncloud-docker-server" as a tar archive run:
 [source,docker]
 ----
-docker run -v owncloud-setup_files:/mnt \
+docker run -v owncloud-docker-server_files:/mnt \
        ubuntu tar cf - -C /mnt . > files.tar
 ----
 ====
