--- a/modules/admin_manual/pages/installation/docker/index.adoc
+++ b/modules/admin_manual/pages/installation/docker/index.adoc
@@ -189,7 +189,7 @@ It is the admin's responsibility to make the files persistent.
 To inspect the volumes run:
 [source,docker]
 ----
-docker volume ls
+docker volume ls | grep files
 ----
 
 The volume name depends on the project name which builds the first part of the volume and the name of the volume in the docker file. The naming pattern of the volume is `<COMPOSE_PROJECT_NAME>_<VOLUME_NAME>`. An environment variable for `COMPOSE_PROJECT_NAME` can be set and also be defined in a `.env` file. If not specified, the directory in which docker-compose is executed will be used as a name.
@@ -197,7 +197,7 @@ The volume name depends on the project name which builds the first part of the v
 To export the files of the project "owncloud-docker-server" as a tar archive run:
 [source,docker]
 ----
-docker run -v owncloud-docker-server_files:/mnt \
+docker run -v <YOUR_DOCKER_VOLUME>:/mnt \
        ubuntu tar cf - -C /mnt . > files.tar
 ----
 ====
