--- a/modules/admin_manual/pages/configuration/server/logging/logging_configuration.adoc
+++ b/modules/admin_manual/pages/configuration/server/logging/logging_configuration.adoc
@@ -61,7 +61,7 @@ The log type can be set to xref:configuration/server/config_sample_php_parameter
 "loglevel" => "3",
 ----
 
-The syslog format can be changed to remove or add information. In addition to the `%replacements%` below `%level%` can be used, but it is used as a dedicated parameter to the syslog logging facility anyway.
+The syslog format can be changed to remove or add information. In addition to the `%replacements%` below, `%level%` can be used, but it is used as a dedicated parameter to the syslog logging facility anyway.
 
 [source,php]
 ----
@@ -76,7 +76,7 @@ For the old syslog message format use:
 
 === Conditional Logging Level Increase
 
-xref:configuration/server/config_sample_php_parameters.adoc#define-log-conditions[Log conditions] for log level increase based on conditions can be set. This will incfrease the logging level to automatically to `debug` when the first condition inside a condition block is met. All conditions are optional !
+xref:configuration/server/config_sample_php_parameters.adoc#define-log-conditions[Log conditions] for log level increase based on conditions can be set. This will increase the logging level automatically to `debug` when the first condition inside a condition block is met. All conditions are optional !
 
 * `shared_secret`: A unique token. If a http(s) request parameter named `log_secret` is added to the request and set to this token, the condition is met.
 * `users`: If the current request is done by one of the specified users, this condition is met.
@@ -106,7 +106,7 @@ The first one that matches triggers the condition block writing the log entry to
 ],
 ----
 
-Based on the conditional log settings above, following logs are written to the same logfile defined:
+Based on the conditional log settings above, the following logs are written to the same logfile:
 
 * Requests matching `log_secret` are debug logged.
 
