Config-to-docs run from latest core changes

--- a/modules/admin_manual/pages/configuration/server/config_sample_php_parameters.adoc
+++ b/modules/admin_manual/pages/configuration/server/config_sample_php_parameters.adoc
@@ -1753,7 +1753,9 @@ quick action will not be displayed!
 'sharing.showPublicLinkQuickAction' => false,
 ....
 
-=== Save and display version of uploaded and edited files.
+=== Save and display the author of each version of uploaded and edited files.
+
+WARNING: This does not work for S3 storage backends.
 
 ==== Code Sample
 
