--- a/modules/admin_manual/pages/configuration/server/activity_configuration.adoc
+++ b/modules/admin_manual/pages/configuration/server/activity_configuration.adoc
@@ -1,7 +1,7 @@
 = Configuring the Activity App
 :page-aliases: configuration_server/activity_configuration.adoc
 :toc: right
-:description: You can configure your ownCloud server to automatically send out Email notifications to your users for various events.
+:description: You can configure your ownCloud server to automatically send out email notifications to your users for various events.
 
 == Introduction
 
@@ -24,12 +24,12 @@ The Activity App is shipped and enabled by default. If it is not enabled, go to 
 
 [TIP] 
 ====
-A working Email configuration is required to configure your ownCloud to send out Email notifications. Furthermore, it is recommended to configure the xref:configuration/server/background_jobs_configuration.adoc#cron-jobs[background job] `Webcron` or `Cron`.
+A working email configuration is required to configure your ownCloud to send out email notifications. Furthermore, it is recommended to configure the xref:configuration/server/background_jobs_configuration.adoc#cron-jobs[background job] `Webcron` or `Cron`.
 ====
 
-Email notifications for shared files can be enabled/disabled by administrators with the "_Allow users to send mail notifications for shared files to other users_", available in menu:Settings[Admin > Sharing]. There is also a xref:configuration/server/config_apps_sample_php_parameters.adoc#app-activity[configuration option] `activity_expire_days` available in your `config.php` which allows you to clean-up older activities from the database.
+Email notifications for shared files can be enabled/disabled by administrators with the "_Allow users to send mail notifications for shared files to other users_" option, available in menu:Settings[Admin > Sharing]. There is also a xref:configuration/server/config_apps_sample_php_parameters.adoc#app-activity[configuration option] `activity_expire_days` available in your `config.php` which allows you to clean up older activities from the database.
 
 == Time Base
 
-* Whenever a default date is enabled and set for expiring shares (e.g. after 7 days), the time base for default dates is the time of the ownCloud server, not the time of the client accessing the ownCloud Server.
-* When a client receives an expiry notification for a share, the expiry is effective at the end of the day based on the time of the ownCloud server and not the time of the client accessing the ownCloud Server.
+* Whenever a default date is enabled and set for expiring shares (e.g. after 7 days), the time base for default dates is the time of the ownCloud server, not the time of the client accessing the ownCloud server.
+* When a client receives an expiry notification for a share, the expiry is effective at the end of the day based on the time of the ownCloud server and not the time of the client accessing the ownCloud server.
