--- a/modules/admin_manual/pages/configuration/files/file_versioning.adoc
+++ b/modules/admin_manual/pages/configuration/files/file_versioning.adoc
@@ -72,7 +72,7 @@ The versions are adjusted along this pattern every time a new version is created
 
 WARNING: The versions app never uses more that 50% of the user’s storage quota. If the stored versions exceed this limit, ownCloud deletes the oldest file versions until it meets the disk space limit again.
 
-TIP: Adjust the `'versions_retention_obligation'` setting in `config.php` to avoid filling up the user's quota. For details see the chapter below.
+TIP: Adjust the `'versions_retention_obligation'` setting in `config.php` to avoid filling up the user's quota. For details see the section below.
 
 == Change the Expiration Settings
 
@@ -132,15 +132,15 @@ Do not apply any expiration rules. Delete all versions after 30 days.
 
 == Show the Author of a Version
 
-You can enable and disable to show the author of a version in the versions history via an entry in config.php. For details see: xref:configuration/server/config_sample_php_parameters.adoc#save-and-display-the-author-of-each-version-of-uploaded-and-edited-files[Save and display the author of each version of uploaded and edited files]. This is helpful to keep track on who did the changes on a version saved. 
+You can enable and disable to show the author of a version in the versions history via an entry in config.php. For details see: xref:configuration/server/config_sample_php_parameters.adoc#save-and-display-the-author-of-each-version-of-uploaded-and-edited-files[Save and display the author of each version of uploaded and edited files]. This is helpful to keep track of who changed a version. 
 
-Adding the author the version screen changes the following:
+After adding the author, the version screen changes in the following way:
 
 image::configuration/files/files_versions/concious-persistent-major-versions.png[Author of a changed saved file,width=250]
 
-=== Concious Persistent Major Versions
+=== Conscious Persistent Major Versions
 
-ownCloud is capable to automatically generate version numbers for versions. To enable this feature, the config setting to show the versions author must be enabled, see above. Based on this feature, one can define the actual version to be a major version which gets a major version number and all new upcoming versions start counting from this major number. To do so, the user has to click on the check mark on the left of the actual version to publish this version as major version.
+ownCloud can automatically generate version numbers for file versions. To enable this feature, the config setting to show a version's author must be enabled as described above. Based on this feature, one can define the actual version to be a major version which gets a major version number and all new upcoming versions start counting from this major number. To do so, the user has to click on the check mark on the left of the actual version to publish it as a major version.
 
 == Enterprise File Retention
 
