--- a/modules/admin_manual/pages/configuration/user/user_roles.adoc
+++ b/modules/admin_manual/pages/configuration/user/user_roles.adoc
@@ -12,7 +12,7 @@
 
 == User Request for Changing a Role
 
-Users can request a change of their current role under menu:User Name[Personal > General > Account]. When clicking the button btn:[Request new role], the new role can be entered and an email will be sent to the admin group for further processing. 
+Users can request a change of their current role under menu:User Name[Settings > Personal > General > Account]. When clicking the button btn:[Request new role], the new role can be entered and an email will be sent to the admin group for further processing.
 
 == Anonymous
 
