--- a/modules/admin_manual/partials/nav.adoc
+++ b/modules/admin_manual/partials/nav.adoc
@@ -116,6 +116,7 @@
 **** xref:admin_manual:configuration/user/user_auth_twofactor.adoc[User Auth TwoFactor]
 **** xref:admin_manual:configuration/user/user_oauth2.adoc[User Auth OAuth2]
 **** xref:admin_manual:configuration/user/user_provisioning_api.adoc[User Provisioning API]
+**** xref:admin_manual:configuration/user/custom_groups_app.adoc[Custom Groups App]
 **** xref:admin_manual:configuration/user/guests_app.adoc[Guests App]
 **** xref:admin_manual:configuration/user/oidc/oidc.adoc[OpenID Connect (OIDC)]
 
